# grhakarya

./: .dockerignore  .env.sample  .gitignore  .readthedocs.yml  Makefile  README.md  docker-compose.test.yaml  docker-compose.test.yml  docker-compose.yaml  docker-compose.yml
api/: .env  (+2 more)
microservices/auth/: Dockerfile  Dockerfile.production  Dockerfile.test  auth_deployment.yaml  auth_environment.yaml  auth_service.yaml  pyproject.toml
microservices/auth/configuration/logging/: prod_config.conf
microservices/auth/docs/source/: conf.py  index.rst  src.config.rst  src.dao.rst  src.db.rst  src.dependencies.rst  src.models.rst  src.rst  src.schemas.rst  src.service.rst  src.utils.rst
microservices/auth/kubernetes/dev/: auth_dev_deployment.yaml  auth_dev_environment.yaml  auth_dev_service.yaml
microservices/auth/kubernetes/test/: auth_test_deployment.yaml  auth_test_environment.yaml  auth_test_service.yaml
microservices/auth/src/: main.py
microservices/auth/src/config/: config.py
microservices/auth/src/dao/: user_dao.py
microservices/auth/src/db/: connection.py  connection_info.py
microservices/auth/src/dependencies/: db_dependency.py  oauth_dependency.py
microservices/auth/src/logging/: logging.py
microservices/auth/src/models/: user_model.py
microservices/auth/src/routers/: sphinx.py  token.py
microservices/auth/src/schemas/: token_schema.py  user_schema.py
microservices/auth/src/service/: token_service.py
microservices/auth/src/utils/: file_helper.py  hashing_helper.py
microservices/auth/tests/: test_main.py
microservices/milk/: .env  Dockerfile  Dockerfile.test  README.md  milk_deployment.yaml  milk_environment.yaml  milk_service.yaml  pyproject.toml  requirements.txt
microservices/milk/src/: config.py  create_table.py  dao.py  db.py  main.py  models.py  schemas.py  security.py
microservices/milk/tests/: test_main.py
(+65 files in other folders)
