[tool.poetry]
name = "milk"
version = "0.1.0"
description = "Daily buying of milk"
authors = ["Dilip Kumar Sharma <diliplakshya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
httpx = "^0.23.2"
pytest = "^7.2.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
